@@ -519,6 +519,7 @@ fi
 * Thu Aug  1 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.63
 - add check-files to rpm-build manifest.
 - python: methods to disable all new features for benchmarking.
+- preserve rpmdb file attributes across --rebuilddb (#70367).
 
 * Wed Jul 31 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.62
 - make --querytags a common option, fix errant regex (#70135).
