@@ -3505,6 +3505,7 @@ static int rpmdbMoveDatabase(const char * prefix,
 {
     int i;
     char * ofilename, * nfilename;
+    struct stat * nst = alloca(sizeof(*nst));
     int rc = 0;
     int xx;
  
@@ -3559,8 +3560,19 @@ static int rpmdbMoveDatabase(const char * prefix,
 		continue;
 	    sprintf(nfilename, "%s/%s/%s", prefix, newdbpath, base);
 	    (void)rpmCleanPath(nfilename);
-	    if ((xx = Rename(ofilename, nfilename)) != 0)
+	    if (Stat(nfilename, nst))
+		continue;
+	    if ((xx = Rename(ofilename, nfilename)) != 0) {
 		rc = 1;
+		continue;
+	    }
+	    xx = chown(nfilename, nst->st_uid, nst->st_gid);
+	    xx = chmod(nfilename, (nst->st_mode & 07777));
+	    {	struct utimbuf stamp;
+		stamp.actime = nst->st_atime;
+		stamp.modtime = nst->st_mtime;
+		xx = utime(nfilename, &stamp);
+	    }
 	}
 	for (i = 0; i < 16; i++) {
 	    sprintf(ofilename, "%s/%s/__db.%03d", prefix, olddbpath, i);
